# langconv.py

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
langconv/: __init__.py  converter.py  trie.py
langconv/data/zh/: TW.json
langconv/language/: __init__.py  zh.py
languageconverter/: trie.py
languageconverter/data/zh/: CN.json  HK.json  LICENSE.md  hans.json  hant.json
languageconverter/language/: __init__.py  zh.py
tests/: test_convert.py  test_perf.py  test_trie.py  zh_cn.txt
typings/iso639/: __init__.pyi  datafile.pyi  exceptions.pyi  iso639.pyi
