[tool.poetry]
name = "langconv"
version = "0.2.0"
description = ""
authors = ["Dianliang233 <dianliang233@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
attrs = "^23.2.0"
iso639-lang = "^2.2.3"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.1.0"
ruff = "^0.3.3"
pytest = "^8.1.1"
pytest-benchmark = "^4.0.0"
snakeviz = "^2.2.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 120
in-place = true
recursive = true
aggressive = 3

[tool.pyright]
reportUndefinedVariable = 'error'
reportUnusedVariable = 'none'
typeCheckingMode = 'strict'

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "SIM", "PL"]
ignore = ["E501", "S101"]
exclude = ["typings/**/*"]

[tool.pytest.ini_options]
markers = ["slow"]
addopts = "--cov=langconv --cov-report xml --cov-report term -m 'not slow'"
