[tool.poetry]
name = "langconv"
version = "0.3.0"
description = "A Python library for conversion between Traditional and Simplified Chinese, inspired by MediaWiki's LanguageConverter."
license = "MIT"
authors = ["Dianliang233 <dianliang233@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Teahouse-Studios/langconv.py"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: Chinese (Traditional)",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Localization",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.9"
attrs = "^23.2.0"
iso639-lang = "^2.2.3"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.1.0"
ruff = "^0.3.3"
pytest = "^8.1.1"
pytest-benchmark = "^4.0.0"
snakeviz = "^2.2.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportUndefinedVariable = 'error'
reportUnusedVariable = 'none'
typeCheckingMode = 'strict'

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "SIM", "PL"]
ignore = ["E501", "S101"]
exclude = ["typings/**/*"]

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
addopts = "--cov=langconv --cov-report xml --cov-report term -m 'not slow'"
